--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -9,6 +9,7 @@
   height: 190px;
   margin-right: 20px;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .profile__column {
@@ -53,7 +54,6 @@
 }
 
 .profile__edit-btn:hover {
-  color: #212121;
   opacity: 100%;
 }
 
