--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -51,6 +51,7 @@
   width: fit-content;
   border: none;
   padding: 0;
+  cursor: pointer;
 }
 
 .profile__edit-btn:hover {
@@ -69,6 +70,7 @@
   border-radius: 8px;
   width: 149px;
   height: 52px;
+  cursor: pointer;
 }
 
 .profile__add-btn:hover {
