--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 20px;
+  font-family: "Poppins";
   visibility: hidden;
 }
 
@@ -56,6 +57,7 @@
 .modal__input {
   padding: 16px 12px;
   border-radius: 8px;
+  border-color: rgba(33, 33, 33, 0.4);
 }
 
 .modal__submit-btn {
