--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -28,24 +28,67 @@
   border-radius: 8px;
 }
 
+.modal__container_type_preview {
+  padding: 0;
+  background-color: transparent;
+  width: unset;
+  overflow: unset;
+}
+
+.modal__image {
+  width: 100%;
+  object-fit: contain;
+  max-width: 80vw;
+  max-height: 80vh;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.modal__caption {
+  background-color: rgba(33, 33, 33, 1);
+  color: rgba(255, 255, 255, 1);
+  font-family: "Poppins";
+  margin: 8px 0 0;
+  font-size: 20px;
+  width: fit-content;
+  font-weight: 500;
+  padding: 4px 8px;
+  border-radius: 8px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-height: 24px;
+}
+
 .modal__close-btn {
   position: absolute;
-  top: 32px;
+  display: flex;
+  top: 30px;
   right: 50px;
   width: 40px;
   height: 40px;
+  padding: 0;
   border: none;
   background-color: transparent;
-}
-
-.modal__close-btn:hover .modal__close-icon {
-  cursor: pointer;
-  opacity: 100%;
 }
 
 .modal__close-icon {
   border: #212121;
   opacity: 40%;
+}
+
+.modal__close-btn_type_preview {
+  background-image: url(../images/close-light.svg);
+  width: 40px;
+  height: 40px;
+  top: 10px;
+  left: calc(100% + 10px);
+  opacity: 1;
+  position: absolute;
+}
+
+.modal__close-btn:hover .modal__close-icon {
+  cursor: pointer;
+  opacity: 100%;
 }
 
 .modal__title {
@@ -83,6 +126,7 @@
 
 .modal__submit-btn:hover {
   cursor: pointer;
+  background-color: #212121;
 }
 
 @media screen and (max-width: 627px) {
