--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -40,7 +40,6 @@
 }
 
 .modal__image {
-  width: 100%;
   object-fit: contain;
   max-width: 80vw;
   max-height: 80vh;
@@ -82,6 +81,7 @@
 
 .modal__close-btn_type_preview {
   background-image: url(../images/close-light.svg);
+  background-position: center;
   width: 40px;
   height: 40px;
   top: 10px;
@@ -133,6 +133,9 @@
   background-color: #212121;
 }
 
+@media screen and (max-width: 320px) {
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
@@ -161,12 +164,14 @@
   }
 
   .modal__image {
-    max-width: fit-content;
+    width: 100%;
+    max-width: none;
+    max-height: none;
     border: 4px;
   }
 
   .modal__close-btn_type_preview {
     top: 41px;
-    left: 510px;
+    left: -12px;
   }
 }
