--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -121,6 +121,19 @@
   border-color: #212121;
 }
 
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
+.modal__submit-btn_disabled {
+  opacity: 0.2;
+}
+
+.modal__error {
+  display: block;
+  color: red;
+}
+
 .modal__submit-btn {
   width: 156px;
   padding: 18px 0;
