New updates for forms

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -126,7 +126,8 @@
 }
 
 .modal__submit-btn_disabled {
-  opacity: 0.2;
+  background-color: rgba(33, 33, 33, 1);
+  opacity: 0.5;
 }
 
 .modal__error {
