--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -125,22 +125,27 @@
   border: 1px solid rgba(255, 0, 0, 0.6);
 }
 
-.modal__submit-btn_disabled {
-  background-color: rgba(33, 33, 33, 1);
-  opacity: 0.5;
-}
-
 .modal__error {
   display: block;
   color: red;
 }
 
 .modal__submit-btn {
-  width: 156px;
+  font-size: 16px;
+  line-height: 1;
+  color: #fcf5e5;
+  width: 100%;
+  max-width: 156px;
   padding: 18px 0;
-  background-color: #000;
-  color: #fff;
+  background: #212121;
   border-radius: 8px;
+  border: none;
+  transition: 0.3s;
+}
+
+.modal__submit-btn_disabled {
+  opacity: 50%;
+  pointer-events: none;
 }
 
 .modal__submit-btn:hover {
