--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -143,7 +143,7 @@
   transition: 0.3s;
 }
 
-.modal__submit-btn_disabled {
+.modal__submit-btn:disabled {
   opacity: 50%;
   pointer-events: none;
 }
